[gd_scene load_steps=2 format=3 uid="uid://cr2fla4xyoh5m"]

[ext_resource type="Script" path="res://gui/task_tracking/editor_add_task_group.gd" id="1_gbbd7"]

[node name="EditorAddTaskGroup" type="PanelContainer"]
script = ExtResource("1_gbbd7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Task Group"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Group Title"
alignment = 1
expand_to_text_length = true
clear_button_enabled = true

[node name="CancelButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
